Fix image overlapping the border

--- a/src/Detail.css
+++ b/src/Detail.css
@@ -18,6 +18,7 @@
 
 .da-col .da-picture {
   height: 100%;
+  padding: 1px;
 }
 
 .da-col .bordered {
